#72 Fixed alignment of checkbox and radio button field text
- Updated display of checkbox, radio button and switch labels
- Removed inline form fields for now (needs to be reworked)
- Fixed alignment of switch field text
- Replaced select input dropdown icon

--- a/scss/components/_components.switch.scss
+++ b/scss/components/_components.switch.scss
@@ -1,9 +1,19 @@
 // # Components: Switch
 // -----------------------------------------------------------------------------
 
+// 1. Allows the hidden checkbox to be positioned realtive to the switch
+//    components position. Needed so the page doesn't jump to the top when a
+//    user focuses the element via keyboard input.
+
 .c-switch {
-	position: relative;
-	display: inline-block;
+	position: relative; // [1]
+	display: block;
+	padding-left: 42px;
+	@include clearfix();
+}
+
+.c-switch__label {
+	font-weight: $font-weight-bold;
 }
 
 .c-switch__input {
@@ -28,14 +38,15 @@
 // 3. Offset the switch handle inside the slider track.
 
 .c-switch__slider {
-	display: inline-block;
 	position: relative;
-	top: 5px; // [1]
+	top: -1px;
+	float: left;
+	display: inline-block;
 	cursor: pointer;
 	background-color: $grey;
 	width: 34px;
 	height: 20px;
-	margin-right: 4px;
+	margin-left: -42px;
 	border-radius: 10px; // [2]
 	box-shadow: $dropshadow--inset;
 	transition: background-color $duration;
