--- a/style.css
+++ b/style.css
@@ -372,10 +372,10 @@ textarea {
 }
 
 select {
-  background-image: url("images/select-arrow.svg");
-  background-position: center right;
+  background-image: url("images/icons/select-arrow.svg");
+  background-position: right 8px center;
   background-repeat: no-repeat;
-  background-size: 30px 30px;
+  background-size: 9px 11px;
   box-shadow: none;
   padding: 0;
   text-overflow: ellipsis;
@@ -995,27 +995,18 @@ select::-ms-expand {
 }
 
 .c-field__label {
-  display: block;
-  font-size: 1rem;
+  display: inline-block;
   font-weight: 600;
-  margin-bottom: 2px;
+  margin-bottom: 6px;
 }
 
 .c-field__label.is-required:after {
   content: "*";
-  margin-left: 2px;
-}
-
-.c-field__label--radio,
-.c-field__label--checkbox {
-  display: inline;
-  font-size: 13px;
-  font-weight: 400;
-  margin-bottom: 0;
+  margin-left: 3px;
 }
 
 .c-field__text {
-  display: inline-block;
+  display: block;
   font-size: 0.85rem;
   margin-bottom: 0;
 }
@@ -1029,53 +1020,51 @@ select::-ms-expand {
   box-shadow: 0 0 0 1px #e00;
 }
 
-[disabled] ~ .c-field__label--radio,
-[disabled] ~ .c-field__label--checkbox {
+.c-radio,
+.c-checkbox {
+  display: inline-block;
+  padding-left: 20px;
+}
+
+.c-radio:after,
+.c-checkbox:after {
+  content: "" !important;
+  display: block !important;
+  clear: both !important;
+}
+
+.c-radio .c-field__label,
+.c-checkbox .c-field__label {
+  margin-bottom: 0;
+}
+
+[type="radio"],
+[type="checkbox"] {
+  float: left;
+  margin-top: 4px;
+  margin-left: -20px;
+}
+
+[type="radio"]:focus,
+[type="checkbox"]:focus {
+  outline: none;
+}
+
+[type="radio"]:focus ~ .c-field__label,
+[type="checkbox"]:focus ~ .c-field__label {
+  box-shadow: 0 0 0 2px #7342ab;
+}
+
+.c-radio--inline {
+  margin-right: 20px;
+}
+
+[disabled] ~ .c-field__label {
   opacity: 0.4;
 }
 
 .c-choices__item:not(:last-child) {
-  margin-right: 24px;
-}
-
-.c-field--inline {
-  margin-bottom: 12px;
-}
-
-.c-field--inline [type="text"],
-.c-field--inline [type="password"],
-.c-field--inline [type="search"],
-.c-field--inline [type="email"],
-.c-field--inline [type="tel"],
-.c-field--inline [type="url"],
-.c-field--inline [type="number"],
-.c-field--inline [type="date"],
-.c-field--inline [type="week"],
-.c-field--inline [type="month"],
-.c-field--inline [type="datetime-local"],
-.c-field--inline [type="color"]
-[type="range"],
-.c-field--inline textarea,
-.c-field--inline select {
-  float: left;
-  width: calc(100% - 120px);
-}
-
-.c-field--inline .c-field__label {
-  float: left;
-  width: 120px;
-  padding-right: 10px;
-}
-
-.c-field--inline .c-field__label--radio,
-.c-field--inline .c-field__label--checkbox {
-  float: none;
-  width: auto;
-  padding-right: 0;
-}
-
-.c-field--inline .c-field__text {
-  margin-left: 120px;
+  margin-bottom: 6px;
 }
 
 .c-list-link {
@@ -1366,7 +1355,18 @@ select::-ms-expand {
 
 .c-switch {
   position: relative;
-  display: inline-block;
+  display: block;
+  padding-left: 42px;
+}
+
+.c-switch:after {
+  content: "" !important;
+  display: block !important;
+  clear: both !important;
+}
+
+.c-switch__label {
+  font-weight: 600;
 }
 
 .c-switch__input:checked + .c-switch__slider {
@@ -1387,14 +1387,15 @@ select::-ms-expand {
 }
 
 .c-switch__slider {
-  display: inline-block;
   position: relative;
-  top: 5px;
+  top: -1px;
+  float: left;
+  display: inline-block;
   cursor: pointer;
   background-color: #bfbfbf;
   width: 34px;
   height: 20px;
-  margin-right: 4px;
+  margin-left: -42px;
   border-radius: 10px;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
   transition: background-color 0.2s;
